# NullHaven

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rust-toolchain.toml  vercel.json
circuits/: deposit.circom  withdraw.circom
contracts/: Cargo.toml
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs
contracts/compliance-registry/: Cargo.toml
contracts/compliance-registry/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/pool/test_snapshots/tests/: test_nullifier_initially_unused.1.json  test_pool_init.1.json  test_set_asp_root_admin_only.1.json  test_set_known_root_admin_only.1.json
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: demo.html
frontend/public/circuits/: verification_key.json  vkey_from_old_zkey.json  withdraw.sym
frontend/scripts/: check-asp.cjs  check-pool.cjs  compute-roots.cjs  gen-proof.cjs  get-roots.cjs  init-verifier.cjs  set-vk.cjs  test-verifier.cjs  test-verify.cjs  verify-onchain.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  Layout.tsx  Toast.tsx  WalletButton.tsx
frontend/src/config/: index.ts
frontend/src/lib/: env.ts  (+1 more)
frontend/tests/: poseidon-cross-check.mjs
scripts/: check_state.py  check_verifier.py  deploy-updated.py  deploy.mjs  init-new-pool.py  init-pool.sh  init-verifier.cjs  init-verifier.mjs  init-verifier.py  init_pool.py  setup.mjs
(+25 files in other folders)
