[package]
name = "nullhaven-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# hazmat-crypto enables CryptoHazmat::poseidon_permutation needed for on-chain Poseidon
soroban-sdk = { workspace = true, features = ["hazmat-crypto"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
